--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <option>Fahrenheit °F</option>
             <option>Kelvin K</option>
         </select>
-        <input type="number" class="temperature"/>
+        <input type="number" class="temperature" placeholder="enter parameter"/>
         <button class="button">Convert</button>
     <div class="result">
         
